# swarmagent

./: .gitignore  readme.md
backend-python/: .env  .env.example  Dockerfile  agent_wechat.db  agent_wechat.db-shm  agent_wechat.db-wal  demo.http  mcp.json  pyproject.toml
backend-python/agent_wechat/: __init__.py  config.py  main.py  utils.py
backend-python/agent_wechat/ai/: __init__.py  llm_client.py  providers.py  tools.py
backend-python/agent_wechat/db/: __init__.py  engine.py  init_db.py  models.py
backend-python/agent_wechat/routers/: __init__.py  admin.py  agent_graph.py  agents.py  config_routes.py  groups.py  health.py  llm_stream.py  messages.py  search.py  sse.py  workspaces.py
backend-python/agent_wechat/runtime/: __init__.py  agent_graph.py  agent_runner.py  agent_runtime.py  agent_state.py  event_bus.py  mcp_registry.py  redis_realtime.py  ui_bus.py
backend-python/agent_wechat/schemas/: agent.py  events.py  group.py  message.py  workspace.py
backend-python/agent_wechat/storage/: __init__.py  store.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  globals.css
frontend/src/api/: agents.ts  client.ts  groups.ts  messages.ts  sse.ts  workspaces.ts
frontend/src/components/: AgentEditPanel.tsx  AgentNodeCard.tsx  ClearDbButton.tsx  CreateWorkspace.tsx  DeleteWorkspace.tsx  IMMessageList.tsx  IMShell.tsx  WorkflowEditor.tsx  index.ts
frontend/src/pages/: GraphPage.tsx  HomePage.tsx  IMPage.tsx
frontend/src/types/: index.ts
